tests/language_tests/pass/0108_modulo_basic.ee
fn main() {
    println(10 % 3);
    println(9 % 3);
}
