tests/language_tests/fail/0020_assign_to_undeclared_in_nested_block.ee
fn main() {
    {
        x = 3;
    }
}
